fixed the css
very likely that I messed up the scss earlier, by deleting the last
part. fixed it.

--- a/css/main.scss
+++ b/css/main.scss
@@ -2129,3 +2129,10 @@ header.navigation {
     right: 0;
     width: 4px;
   }
+}
+
+#owl-demo .item img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
